[package]
name = "mina-p2p-rust-demo"
version = "0.1.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
# libp2p = {path = "../../../rust-libp2p", features = ["tcp-tokio"]}
# libp2p-mplex = {path = "../../../rust-libp2p/muxers/mplex"}
# libp2p-relay = {path = "../../../rust-libp2p/protocols/relay"}
# libp2p-websocket = {path = "../../../rust-libp2p/transports/websocket"}

libp2p = {git = "https://github.com/libp2p/rust-libp2p", rev = "243f587eed9a2ce5f7b057506e51e2ad956bbc4c", features = ["tcp-tokio"]}
libp2p-mplex = {git = "https://github.com/libp2p/rust-libp2p", rev = "243f587eed9a2ce5f7b057506e51e2ad956bbc4c"}
libp2p-relay = {git = "https://github.com/libp2p/rust-libp2p", rev = "243f587eed9a2ce5f7b057506e51e2ad956bbc4c"}
libp2p-websocket = {git = "https://github.com/libp2p/rust-libp2p", rev = "243f587eed9a2ce5f7b057506e51e2ad956bbc4c"}

anyhow = "1"
async-trait = "0.1"
env_logger = "0.9"
futures = "0.3"
hex = "0.4"
js-sys = "0.3"
multihash = "0.15"
tokio = {version = "1", features = ["full"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
